header layout - WIP

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
 <header id="site-header" class="site-header">
 	<a class="site-header__logo" href="{{ site.url }}{{ site.baseurl }}/">
-	<svg class="hbc-tech-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-        <use class="hbc-tech-logo__1670" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-tech-logo__1670"></use>
-		<use class="hbc-tech-logo__text" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-tech-logo__text"></use>
+	<svg class="hbc-tech-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 52">
+		<use class="hbc-tech-logo__text" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-tech-logo"></use>
     </svg>
 	</a>
 	<p class="sticky-nav-meta">
