--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -1,29 +1,13 @@
 .navigation {
-    display: flex;
-    float: right;
-    width: 250px;
-    margin: 8px 0;
+    grid-area: nav;
+    display: inline-flex;
     padding: 0;
-    -webkit-backface-visibility: hidden; /* add to fix webkit bug jitter */
-    -webkit-transform: perspective(1000px); /* add to fix webkit bug jitter */
-    transition: margin 200ms ease-out;
     
     &__link-item {
-	    flex-grow: 2;
         list-style: none;
-        text-align: center;
+        text-align: right;
         height: 36px;
-        margin-bottom: 0;
-
-        &:first-child {
-            flex-grow: 1;
-            text-align: left;
-        }
-
-        &:last-child {
-            flex-grow: 1;
-            text-align: right;
-        }
+        margin: 0 0 0 40px;
     }
 
     &__link {
@@ -78,14 +62,11 @@
         }
 	}
 
-    &--footer {
-        margin: -5px 30px 0 0;
-    }
-
     @media screen and (max-width: $breakpoint-medium) {
-        float: none;
-        width: 70%;
-        margin: 0 auto 10px auto;
+        margin: auto;
 
+        &__link-item {
+            margin: 0 20px;
+        }
     }
 }
