--- a/assets/sass/components/_social-links.scss
+++ b/assets/sass/components/_social-links.scss
@@ -30,7 +30,7 @@
 	}
 
 
-	@media screen and (max-width: $breakpoint-small) {
+	@media screen and (max-width: $breakpoint-medium) {
 
 		&__list {
 			margin: 26px 0 20px 0;
