--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -5,33 +5,60 @@ $sticky-header-height: 100px;
 $sticky-header-offset: 125px;
 
 // breakpoints
-$breakpoint-small: 375px;
-$breakpoint-medium: 768px;
-$breakpoint-large: 1024px;
+$breakpoint-medium: 767px;
+$breakpoint-large: 1023px;
 
 .container {
 	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    grid-template-areas: 
-      "hd hd hd hd   hd   hd   hd   hd   hd  hd   hd hd"
-      ". main main main main main main main main main main ."
-      "ft ft ft ft   ft   ft   ft   ft   ft   ft   ft   ft";
+    grid-auto-rows: minmax(10px, auto);
 
-	@media screen and (max-width: $breakpoint-medium) {
+	// desktop layout
+	@media screen and (min-width: $breakpoint-large) {
+		grid-template-columns: repeat(12, 1fr);
+	    grid-template-areas: 
+	      "hd hd hd hd   hd   hd   hd   hd   hd  hd   hd hd"
+	      ". main main main main main main main main main main ."
+	      "ft ft ft ft   ft   ft   ft   ft   ft   ft   ft   ft";
+   	}
+
+   	// tablet layout
+	@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
 	    grid-template-columns: 1fr;
 	    grid-template-areas: "hd" "main" "ft";
 	}
+
+	// tablet landscape
+	@media screen and (max-height: 768px) and (orientation: landscape) {
+	    grid-template-columns: 1fr;
+	    grid-template-areas: "hd" "main" "ft";
+	}
+
+	// mobile layout
+    @media screen and (max-width: $breakpoint-medium) {
+	    grid-template-columns: 1fr;
+	    grid-template-areas: "hd" "main" "ft";
+    }
 }
 
 .content {
     grid-area: main;
-	margin: auto;
 	display: grid;
 	grid-template-columns: minmax(auto, $content-width);
+    margin: auto;
 
 	@media screen and (max-width: $breakpoint-medium) {
 	    grid-template-columns: 1fr;
+	}
+
+	// tablet and down
+	@media screen and (max-width: $breakpoint-large) {
+		padding-right: 5vw;
+		padding-left: 5vw;
+	}
+	// tablet landscape
+	@media screen and (max-height: 768px) and (orientation: landscape) {
+		padding-right: 5vw;
+		padding-left: 5vw;
 	}
 }
 
@@ -40,7 +67,7 @@ $breakpoint-large: 1024px;
 	display: inline-block;
     position: relative;
     left: 50%;
-    transform: translateX(-60%);
+    transform: translateX(-50%);
 }
 
 .right-align {
@@ -107,6 +134,20 @@ $breakpoint-large: 1024px;
 
 	&__title {
 		margin: 0;
+
+		// mobile layout
+	    @media screen and (max-width: $breakpoint-medium) {
+			margin-top: 20px;
+	    }
+		// tablet landscape
+		@media screen and (max-height: 768px) and (orientation: landscape) {
+			margin-top: 20px;
+	    }
+
+	    // tablet layout
+		@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) and (orientation: portrait) {
+			margin-top: 20px;
+		}
 	}
 
 	&__description {
