--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,9 +1,7 @@
 .site-header {
     grid-area: hd;
     display: grid;
-    grid-template-columns: minmax(150px, 1fr) minmax($content-width/2, $content-width) 1fr;
     grid-auto-rows: 1fr;
-    grid-template-areas: "logo meta nav";
     max-height: 150px;
 	background-color: $hbc-off-white;
 	color: $hbc-black;
@@ -21,29 +19,6 @@
 		    height: 100px;
 	        transition: all 200ms ease-out;
 		}
-	}
-
-	@media screen and (min-width: $breakpoint-medium) {
-
-	    &--scaled,
-	    &--shaddow {
-			position: sticky;
-		    top: 0;
-    	    transition: all 300ms ease-out;
-	        padding: 10px 5vw;
-		    margin-bottom: 10px;
-		    max-height: $sticky-header-height;
-	    	
-
-			.hbc-tech-logo {
-			    height: 50px;
-			    margin-top: 15px;
-			}
-	    }
-
-	    &--shaddow {
-	    	box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
-	    }
 	}
 
 	.sticky-nav-meta {
@@ -88,24 +63,183 @@
 		}
 	}
 
+	.navigation {
+	    grid-area: nav;
+	    display: inline-block;
+	    text-align: right;
+	    padding: 0;
+	    
+	    &__link-item {
+	        display: inline-block;
+	        list-style: none;
+	        text-align: right;
+	        height: 36px;
+	        margin: 0 0 0 40px;
+	    }
 
-    @media screen and (max-width: $breakpoint-medium) {
-	    grid-template-columns: 1fr;
-	    grid-template-rows: 1fr 1fr;
-	    grid-template-areas: "logo" "nav";
-	    padding: 20px 0;
+	    &__link {
+	        display: block;
+	        line-height: 120%;
+			color: $hbc-black;
+			text-decoration: none;
+
+	        &:hover,
+	        &--current:hover {
+	            color: $hbc-highlight;
+	            cursor: pointer;
+	            
+	            .navigation__link-highlight {
+
+	                &:after {
+	                    border-bottom: solid 2px $hbc-highlight;
+	                    transform: scaleX(1);
+	                }
+	            }
+	        }
+
+	        &--current {
+	            color: $hbc-black;
+	            
+	            .navigation__link-highlight {
+
+	                &:after {
+	                    border-bottom: solid 2px $hbc-black;
+	                    transform: scaleX(1);
+	                }
+	            }
+
+	        }
+	    }
+
+	    &__link-highlight {
+	        display: inline-block;
+	        height: 36px;
+	        padding: 10px 0;
+			transition: color 0ms ease-out;
+	        font-weight: 500;
+
+	        &:after {
+	            content: "";
+	            display: block;
+	            margin-top: 4px;
+	            border-bottom: solid 2px $hbc-highlight;
+	            transform: scaleX(0);
+	            transform-origin: 0 0;
+	            transition: transform 150ms ease-out;
+	        }
+		}
+	}
+
+	// desktop layout
+	@media screen and (min-width: $breakpoint-large) {
+	    grid-template-columns: minmax(100px, 150px) 1fr 1fr;
+	    grid-template-areas: "logo meta nav";
+
+	    &--scaled,
+	    &--shaddow {
+			position: sticky;
+		    top: 0;
+    	    transition: all 300ms ease-out;
+	        padding: 10px 5vw;
+		    margin-bottom: 10px;
+		    max-height: $sticky-header-height;
+	    	
+
+			.hbc-tech-logo {
+			    height: 50px;
+			    width: 62px;
+			    margin-top: 15px;
+			}
+	    }
+
+	    &--shaddow {
+	    	box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
+	    }
+	}
+
+   	// tablet layout
+	@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) and (orientation: portrait) {
+		grid-template-columns: 20% 80%;
+	    grid-template-areas: "logo nav";
+	    padding: 20px 5vw 0 5vw;
+	    margin-bottom: 0px;
 	    border-bottom: solid 1px $hbc-border;
+
+	   	.sticky-nav-meta {
+    		display: none;
+    	}
+
+		&__logo {
+		    margin-top: 10px;
+
+			.hbc-tech-logo {
+			    height: 50px;
+			    width: 62px;
+			}
+		}
+	}
+
+	// tablet landscape
+	@media screen and (max-height: 768px) and (orientation: landscape) {
+		grid-template-columns: 20% 80%;
+	    grid-template-areas: "logo nav";
+	    padding: 20px 5vw 0 5vw;
+	    margin-bottom: 0px;
+	    border-bottom: solid 1px $hbc-border;
+
+	   	.sticky-nav-meta {
+    		display: none;
+    	}
+
+    	&--scaled,
+	    &--shaddow {
+			position: relative;
+		}
+
+		&__logo {
+		    margin-top: 10px;
+
+			.hbc-tech-logo {
+			    height: 50px;
+			    width: 62px;
+			}
+		}
+	}
+
+	// mobile layout
+    @media screen and (max-width: $breakpoint-medium) and (orientation: portrait) {
+	    display: block;
+	    width: 100%;
+	    padding: 20px 5vw 20px 5vw;
+	    margin-bottom: 0px;
+	    border-bottom: solid 1px $hbc-border;
+		margin: auto;
 
     	.sticky-nav-meta {
     		display: none;
     	}
 
 		&__logo {
-		    margin: 0 auto 20px auto;
+	    	display: block;
+		    height: 50px;
+		    width: 62px;
+		    margin: auto;
 
 			.hbc-tech-logo {
 			    height: 50px;
+			    width: 62px;
 			}
 		}
+
+	    .navigation {
+	    	display: block;
+		    width: 100%;
+		    margin-top: 20px;
+		    text-align: center;
+
+	        &__link-item {
+	            margin: 0 20px;
+	        }
+	    }
     }
 }
