--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -207,7 +207,70 @@
 		}
 	}
 
+	// Tablet layout
+	@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
+		&__no-feature-image {
+	        animation-name: reveal-feature-image--mobile, color-animation;
+            animation-duration: 0s, 30s;
+	        animation-delay: 0s, 0.5s;
+            transform: scaleX(1.8);
+			height: 100vh;
+	    }
 
+    	&__feature-image {
+	        animation-name: reveal-feature-image--mobile;
+		}
+
+		&__feature-image,
+		&__no-feature-image {
+			display: none;
+			visibility: invisible;
+		}
+
+		.article__content {
+			padding-top: 10px;
+		    margin-top: 0;
+	        top: 0;
+			grid-template-columns: 40px 20px 1fr 40px;
+		    grid-template-areas:
+			    ". meta meta ."
+			    ". title title ."
+			    ". read-time read-time read-time"
+			    ". body body . "
+			    "share share share share"
+			    "share share share share"
+			    ". footer footer . "
+			;
+
+			&__read-time {
+				.read-time__text-1,
+				.read-time__text-2,
+				.read-time__text-3 {
+					display: inline-block;
+					margin: 0;
+				}
+			}
+
+			&__share-buttons {
+				width: 100vw;
+				position: relative;
+			    top: auto;
+
+				.share-buttons {
+					background-color: #fff;				
+					width: 100%;
+
+					&__link-item {
+						margin: 0 0 0 10px;
+						float: left;
+						opacity: 1;
+					}
+				}
+			}
+		}
+	}
+
+	// Mobile Layout
 	@media screen and (max-width: $breakpoint-medium) {
 
 		&__no-feature-image {
@@ -229,7 +292,7 @@
 		}
 
 		.article__content {
-		    padding-top: 10px;
+	        padding: 10px 20px;
 		    margin-top: 0;
 	        top: 0;
 			grid-template-columns: 10px 20px 1fr 10px;
@@ -258,7 +321,7 @@
 			}
 
 			&__share-buttons {
-				width: 100vw;
+				width: 100%;
 				position: relative;
 			    top: auto;
 
