--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -17,9 +17,7 @@
 		}
 
 		.feature-image {
-		    // max-height: 589px;
 		    width: 100%;
-			// object-fit: fill;
 		}
 
 		.snippet__title {
@@ -27,7 +25,6 @@
 		    grid-row: 5/6;
 			margin: 0 0 40px 0;
 			font-size: 55px;
-			// width: 70%;
 		}
 
 		.snippet__link {
@@ -45,61 +42,63 @@
 			background-color: $hbc-white;
 		}
 	}
-
-	&__sub-featured {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-auto-rows: minmax(100px, auto);
-		border-bottom: solid 1px $hbc-border;
-		padding-bottom: 80px;
-		margin-bottom: 40px;
-
-		.snippet {
-			padding: 20px 40px;
-
-			&:first-child {
-				border-right: solid 1px $hbc-border;
-			}	
-
-			&:last-child {
-				padding-right: 0;
-				padding-left: 40px;
-			}
-		}	
+	
+	// Tablet and down
+	@media screen and (max-width: $breakpoint-large) {
+	    margin: 0 -5vw 0 -5vw;
 	}
 
-	&__remaining  {
-		display: grid;
-		grid-template-columns: 30% 70%;
-		grid-auto-rows: repeat(11, minmax(100px, auto));
-	    grid-template-areas:
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    ". pg";
+	// tablet landscape
+	@media screen and (max-height: 768px) and (orientation: landscape) {
+	    margin: 0 -5vw 0 -5vw;
+	}
 
-		align-items: start;
-		padding: 40px 0 40px 40px;
+	// desktop and tablet layout
+	@media screen and (min-width: $breakpoint-medium) {
+	   	&__sub-featured {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			grid-auto-rows: minmax(100px, auto);
+			border-bottom: solid 1px $hbc-border;
+			margin-bottom: 40px;
+			padding: 0 0px 80px 0px;
 
-		.featured-topics {
-			grid-area: ft;
-			position: sticky;
-			top: $sticky-header-offset;
-			margin-right: 40px;
+			.snippet {
+
+				&:first-child {
+					border-right: solid 1px $hbc-border;
+					padding-right: 40px;
+				}	
+
+				&:last-child {
+					padding-left: 40px;
+				}
+			}	
 		}
 
-		@media screen and (min-width: $breakpoint-medium) {
+		&__remaining  {
+			display: grid;
+			grid-template-columns: 30% 70%;
+			grid-auto-rows: repeat(11, minmax(100px, auto));
+		    grid-template-areas:
+		    "ft art"
+		    "ft art"
+		    "ft art"
+		    "ft art"
+		    "ft art"
+		    "ft art"
+		    "ft art"
+		    "ft art"
+		    "ft art"
+		    "ft art"
+		    ". pg";
+
+			align-items: start;
+			padding: 40px 0 0 0;
 
 			.snippet {
 				grid-area: art;
-				padding-left: 60px;
+				padding-left: 40px;
 				grid-row: auto;
 				border-left: solid 1px $hbc-border;
 				margin-bottom: 0px;
@@ -128,19 +127,46 @@
 				}
 			}
 
-			.pagination {
-				grid-area: pg;
-				align-self: flex-end;
-				margin: 60px;
+			.featured-topics {
+				grid-area: ft;
+				position: sticky;
+				top: $sticky-header-offset;
+				margin-right: 40px;
+			}	
+		}	
+   	}
+
+   	// tablet layout
+	@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
+
+		&__remaining  {
+			.featured-topics {
+				top: 40px;
 			}
 		}
 	}
 
-	
+	// tablet landscape
+	@media screen and (max-height: 768px) and (orientation: landscape) {
 
-	@media screen and (max-width: $breakpoint-medium) {
-		max-width: 100vw;
+		&__remaining  {
+			.featured-topics {
+				top: 40px;
+			}
+		}
+	}
 
+	// mobile layout
+    @media screen and (max-width: $breakpoint-medium) {
+
+		&__featured {
+			margin-bottom: 40px;
+			grid-template-columns: 20px 1fr 20px;
+
+			.snippet__title {
+				font-size: 45px;
+			}
+		}
 				
 		&__sub-featured,
 		&__remaining {
@@ -150,19 +176,10 @@
 			margin-bottom: 0;
 		}
 
-		&__featured {
-			margin-bottom: 40px;
-			grid-template-columns: 20px 1fr 20px;
-
-		}
-
-
-
 		&__sub-featured {
-		    padding: 0 20px;
 
 			.snippet {
-				padding: 20px 0;
+				padding: 20px 0 40px 0;
 			    margin-bottom: 20px;
 			    border-bottom: solid 1px $hbc-border;
 
@@ -182,10 +199,9 @@
 		}
 
 		&__remaining  {
-		    padding: 0 20px;
 
 			.snippet {
-			    margin-bottom: 20px;
+			    margin-bottom: 40px;
 
 			    &:first-of-type {
 					padding-top: 20px;
