--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -52,13 +52,13 @@ $breakpoint-large: 1023px;
 
 	// tablet and down
 	@media screen and (max-width: $breakpoint-large) {
-		padding-right: 5vw;
-		padding-left: 5vw;
+		padding-right: 40px;
+		padding-left: 40px;
 	}
 	// tablet landscape
 	@media screen and (max-height: 768px) and (orientation: landscape) {
-		padding-right: 5vw;
-		padding-left: 5vw;
+		padding-right: 40px;
+		padding-left: 40px;
 	}
 }
 
