--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     grid-area: ft;
 	color: lighten($hbc-black, 50%);
-	padding: 40px 5vw;
+	padding: 40px 40px;
 	border-top: solid 1px $hbc-border;
 	display: flex;
 	position: relative;
