--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -7,7 +7,7 @@
 	color: $hbc-black;
     z-index: 100;
     transition: all 100ms ease-out;
-    padding: 40px 5vw;
+    padding: 40px 40px;
     margin-bottom: 40px;
 
 	&__logo {
@@ -130,7 +130,7 @@
 		}
 	}
 
-	// desktop layout
+	// Desktop Large
 	@media screen and (min-width: $breakpoint-large) {
 	    grid-template-columns: minmax(100px, 150px) 1fr 1fr;
 	    grid-template-areas: "logo meta nav";
@@ -140,7 +140,7 @@
 			position: sticky;
 		    top: 0;
     	    transition: all 300ms ease-out;
-	        padding: 10px 5vw;
+	        padding: 10px 40px;
 		    margin-bottom: 10px;
 		    max-height: $sticky-header-height;
 	    	
@@ -157,11 +157,11 @@
 	    }
 	}
 
-   	// tablet layout
+   	// Tablet Potrait
 	@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) and (orientation: portrait) {
 		grid-template-columns: 20% 80%;
 	    grid-template-areas: "logo nav";
-	    padding: 20px 5vw 0 5vw;
+	    padding: 20px 40px 0 40px;
 	    margin-bottom: 0px;
 	    border-bottom: solid 1px $hbc-border;
 
@@ -183,7 +183,7 @@
 	@media screen and (max-height: 768px) and (orientation: landscape) {
 		grid-template-columns: 20% 80%;
 	    grid-template-areas: "logo nav";
-	    padding: 20px 5vw 0 5vw;
+	    padding: 20px 40px 0 40px;
 	    margin-bottom: 0px;
 	    border-bottom: solid 1px $hbc-border;
 
@@ -210,7 +210,7 @@
     @media screen and (max-width: $breakpoint-medium) and (orientation: portrait) {
 	    display: block;
 	    width: 100%;
-	    padding: 20px 5vw 20px 5vw;
+	    padding: 20px 40px 20px 40px;
 	    margin-bottom: 0px;
 	    border-bottom: solid 1px $hbc-border;
 		margin: auto;
