--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -292,10 +292,10 @@
 		}
 
 		.article__content {
-	        padding: 10px 20px;
+	        padding: 20px 0 80px 0;
 		    margin-top: 0;
 	        top: 0;
-			grid-template-columns: 10px 20px 1fr 10px;
+			grid-template-columns: 0 20px 1fr 0;
 		    grid-template-areas:
 			    ". meta meta ."
 			    ". title title ."
@@ -333,6 +333,10 @@
 						margin: 0 0 0 10px;
 						float: left;
 						opacity: 1;
+
+						&:first-child {
+							margin-left: 0;
+						}
 					}
 				}
 			}
