--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -42,99 +42,111 @@
 			background-color: $hbc-white;
 		}
 	}
+
+	&__sub-featured {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-auto-rows: minmax(100px, auto);
+		border-bottom: solid 1px $hbc-border;
+		margin-bottom: 40px;
+		padding: 0 0 80px 0;
+
+		.snippet {
+
+			&:first-child {
+				border-right: solid 1px $hbc-border;
+				padding-right: 40px;
+			}	
+
+			&:last-child {
+				padding-left: 40px;
+			}
+		}	
+	}
+
+	&__remaining  {
+		display: grid;
+		grid-template-columns: 30% 70%;
+		grid-auto-rows: repeat(11, minmax(100px, auto));
+	    grid-template-areas:
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    ". pg";
+
+		align-items: start;
+		padding: 40px 0 0 0;
+
+		.snippet {
+			grid-area: art;
+			padding-left: 40px;
+			grid-row: auto;
+			border-left: solid 1px $hbc-border;
+			margin-bottom: 0px;
+			
+			&__title {
+				border-top: solid 1px $hbc-border;
+				margin-top: 40px;
+				padding-top: 40px;
+				width: 100%;
+			}
+
+			&:first-of-type {
+				padding-top: 0;
+				margin-top: -5px;
+
+				.snippet__title {
+					padding-top: 0;
+					margin-top: 0;
+					border: 0;
+				}
+			}
+
+			&:last-child {
+				border-bottom: solid 1px $hbc-border;
+				width: 100%;
+			}
+		}
+
+		.featured-topics {
+			grid-area: ft;
+			position: sticky;
+			top: $sticky-header-offset;
+			margin-right: 40px;
+		}	
+	}
 	
+	// Wide Screens
+	@media screen and (min-width: $breakpoint-large) {
+	    &__sub-featured,
+	    &__remaining {
+			padding-left: 40px;
+			padding-right: 40px;
+	    }
+	}
+
 	// Tablet and down
 	@media screen and (max-width: $breakpoint-large) {
-	    margin: 0 -5vw 0 -5vw;
+	    margin: 0 -40px 0 -40px;
 	}
 
 	// tablet landscape
 	@media screen and (max-height: 768px) and (orientation: landscape) {
-	    margin: 0 -5vw 0 -5vw;
-	}
+	    margin: 0 -40px 0 -40px;
 
-	// desktop and tablet layout
-	@media screen and (min-width: $breakpoint-medium) {
-	   	&__sub-featured {
-			display: grid;
-			grid-template-columns: repeat(2, 1fr);
-			grid-auto-rows: minmax(100px, auto);
-			border-bottom: solid 1px $hbc-border;
-			margin-bottom: 40px;
-			padding: 0 0px 80px 0px;
-
-			.snippet {
-
-				&:first-child {
-					border-right: solid 1px $hbc-border;
-					padding-right: 40px;
-				}	
-
-				&:last-child {
-					padding-left: 40px;
-				}
-			}	
-		}
-
-		&__remaining  {
-			display: grid;
-			grid-template-columns: 30% 70%;
-			grid-auto-rows: repeat(11, minmax(100px, auto));
-		    grid-template-areas:
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    ". pg";
-
-			align-items: start;
-			padding: 40px 0 0 0;
-
-			.snippet {
-				grid-area: art;
-				padding-left: 40px;
-				grid-row: auto;
-				border-left: solid 1px $hbc-border;
-				margin-bottom: 0px;
-				
-				&__title {
-					border-top: solid 1px $hbc-border;
-					margin-top: 40px;
-					padding-top: 40px;
-					width: 100%;
-				}
-
-				&:first-of-type {
-					padding-top: 0;
-					margin-top: -5px;
-
-					.snippet__title {
-						padding-top: 0;
-						margin-top: 0;
-						border: 0;
-					}
-				}
-
-				&:last-child {
-					border-bottom: solid 1px $hbc-border;
-					width: 100%;
-				}
-			}
-
+		&__remaining {
 			.featured-topics {
-				grid-area: ft;
-				position: sticky;
-				top: $sticky-header-offset;
-				margin-right: 40px;
-			}	
-		}	
-   	}
+				top: 40px;
+			}
+		}
+	}
 
    	// tablet layout
 	@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
@@ -146,15 +158,6 @@
 		}
 	}
 
-	// tablet landscape
-	@media screen and (max-height: 768px) and (orientation: landscape) {
-
-		&__remaining  {
-			.featured-topics {
-				top: 40px;
-			}
-		}
-	}
 
 	// mobile layout
     @media screen and (max-width: $breakpoint-medium) {
@@ -177,6 +180,7 @@
 		}
 
 		&__sub-featured {
+			padding: 0;
 
 			.snippet {
 				padding: 20px 0 40px 0;
@@ -199,9 +203,12 @@
 		}
 
 		&__remaining  {
+			grid-template-columns: 1fr;
 
 			.snippet {
 			    margin-bottom: 40px;
+			    padding-left: 0;
+			    border-left: 0;
 
 			    &:first-of-type {
 					padding-top: 20px;
