breakpoint layout updates

--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -5,6 +5,7 @@ $sticky-header-height: 100px;
 $sticky-header-offset: 125px;
 
 // breakpoints
+$breakpoint-small: 375px;
 $breakpoint-medium: 767px;
 $breakpoint-large: 1023px;
 
@@ -50,8 +51,8 @@ $breakpoint-large: 1023px;
 	    grid-template-columns: 1fr;
 	}
 
-	// tablet and down
-	@media screen and (max-width: $breakpoint-large) {
+	// tablet layout
+	@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
 		padding-right: 40px;
 		padding-left: 40px;
 	}
@@ -60,6 +61,11 @@ $breakpoint-large: 1023px;
 		padding-right: 40px;
 		padding-left: 40px;
 	}
+	// mobile layout
+    @media screen and (max-width: $breakpoint-medium) {
+		padding-right: 20px;
+		padding-left: 20px;
+    }
 }
 
 
