--- a/assets/sass/components/_pagination.scss
+++ b/assets/sass/components/_pagination.scss
@@ -104,17 +104,16 @@
 		}
 	}
 
-	// mobile layout
-    @media screen and (max-width: $breakpoint-medium) {
-    	text-align: center;
-    	margin: auto;
-	    padding: 0 0 40px 0;
-	    min-height: 0;
-    }
-
     // tablet and above
     @media screen and (min-width: $breakpoint-medium) {
 	    padding-left: 40px;
 	    margin-top: 60px;
+    }
+
+	// mobile layout
+    @media screen and (max-width: $breakpoint-medium) {
+    	text-align: center;
+    	margin: 20px auto;
+	    min-height: 0;
     }
 }
