--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -108,11 +108,6 @@
 					border: 0;
 				}
 			}
-
-			&:last-child {
-				border-bottom: solid 1px $hbc-border;
-				width: 100%;
-			}
 		}
 
 		.featured-topics {
@@ -124,7 +119,7 @@
 	}
 	
 	// Wide Screens
-	@media screen and (min-width: $breakpoint-large) {
+	@media screen and (min-width: 1100px) {
 	    &__sub-featured,
 	    &__remaining {
 			padding-left: 40px;
@@ -132,14 +127,14 @@
 	    }
 	}
 
-	// Tablet and down
-	@media screen and (max-width: $breakpoint-large) {
-	    margin: 0 -40px 0 -40px;
-	}
 
 	// tablet landscape
-	@media screen and (max-height: 768px) and (orientation: landscape) {
-	    margin: 0 -40px 0 -40px;
+	@media screen and (max-width: $breakpoint-medium) and (orientation: landscape) {
+
+		&__featured {
+		    margin-left: -40px;
+		    margin-right: -40px;
+		}
 
 		&__remaining {
 			.featured-topics {
@@ -151,6 +146,11 @@
    	// tablet layout
 	@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
 
+		&__featured {
+		    margin-left: -40px;
+		    margin-right: -40px;
+		}
+
 		&__remaining  {
 			.featured-topics {
 				top: 40px;
@@ -161,10 +161,11 @@
 
 	// mobile layout
     @media screen and (max-width: $breakpoint-medium) {
+		
 
 		&__featured {
-			margin-bottom: 40px;
 			grid-template-columns: 20px 1fr 20px;
+			margin: 0 -20px 40px -20px;
 
 			.snippet__title {
 				font-size: 45px;
@@ -189,6 +190,7 @@
 
 			    &:first-child {
 					padding-top: 40px;
+					padding-right: 0px;
 				    border-top: solid 1px $hbc-border;
 			    }
 
@@ -204,27 +206,16 @@
 
 		&__remaining  {
 			grid-template-columns: 1fr;
+			padding-top: 0;
 
 			.snippet {
-			    margin-bottom: 40px;
 			    padding-left: 0;
 			    border-left: 0;
+			    width: 100%;
 
 			    &:first-of-type {
 					padding-top: 20px;
 			    }
-
-				.snippet__excerpt {
-					border-bottom: solid 1px $hbc-border;
-					width: 100%;
-					padding-bottom: 40px;
-				}
-
-				.snippet__excerpt {
-					border-bottom: solid 1px $hbc-border;
-					width: 100%;
-					padding-bottom: 40px;
-				}
 			}
 		}	
 	}
