adding @include-media for easier media queries

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,7 @@
 // Vendor styles
 @import '../sass/vendor/normalize';
 @import '../sass/vendor/syntax-highlighting';
+@import '../sass/vendor/include-media';
 
 // base
 @import '../sass/base/common';
