--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,73 +1,50 @@
 .site-header {
     grid-area: hd;
-    display: grid;
-    grid-auto-rows: 1fr;
-    max-height: 150px;
+    display: block;
+    max-height: 200px;
+    max-width: 100vw;
+    margin-bottom: 0px;
+    padding: 20px;
 	background-color: $hbc-off-white;
+    border-bottom: solid 1px $hbc-border;
 	color: $hbc-black;
     z-index: 100;
-    transition: all 100ms ease-out;
-    padding: 40px 40px;
-    margin-bottom: 40px;
+
 
 	&__logo {
 	    grid-area: logo;
-	    display: inline-flex;
 	    align-self: baseline;
+	    display: block;
+	    margin: auto;
+	    height: 65px;
+        width: 65px;
 
 		.hbc-tech-logo{
-		    height: 100px;
 	        transition: all 200ms ease-out;
+		    height: 100%;
+		    width: 100%;
 		}
 	}
 
-	.sticky-nav-meta {
+   	.sticky-nav-meta {
 	    grid-area: meta;
 		display: inline-flex;
         align-items: baseline;
         align-self: center;
+        margin: 0;
 	    opacity: 0;
-        margin-top: 0;
 	    visibility: hidden;
-		transition: opacity 200ms ease-in, transform 200ms ease-out;
-    	transform: translateX(20px);
-
-	    &--show {
-	    	opacity: 1;
-		    visibility: visible;
-	    	transform: translateX(0);
-	    }
-
-	    .meta {
-	    	&__category {
-				text-transform: uppercase;
-				color: $hbc-highlight;
-			    font-size: 15px;
-
-				@include special-text-link();
-			}
-
-			&__title {
-
-				&:before {
-					display: inline-block;
-					position: relative;
-					content: "";
-					height: 20px;
-					top: 5px;
-					border-right: solid 1px $hbc-border;
-					margin-left: 10px;
-					margin-right: 17px;
-				}
-			}
-		}
+		display: none;
+		transform: translateX(20px);
 	}
 
 	.navigation {
 	    grid-area: nav;
+	    align-self: center;
 	    display: inline-block;
 	    text-align: right;
 	    padding: 0;
+	    margin: 0;
 	    
 	    &__link-item {
 	        display: inline-block;
@@ -130,10 +107,62 @@
 		}
 	}
 
-	// Desktop Large
-	@media screen and (min-width: $breakpoint-large) {
-	    grid-template-columns: minmax(100px, 150px) 1fr 1fr;
+	// small portrait
+    @include media('>=small', '<medium', 'portrait') {
+
+	    .navigation {
+	    	display: block;
+		    margin-top: 20px;
+		    text-align: center;
+
+	        &__link-item {
+	            margin: 0 20px;
+	        }
+	    }
+    }
+
+   	// medium portrait
+	@include media('>=medium', 'portrait') {
+	    display: grid;
+	    grid-auto-rows: 1fr;
+		grid-template-columns: 20% 80%;
+		grid-template-areas: "logo nav";
+	    transition: all 100ms ease-out;
+	    padding: 20px 40px;
+	    
+		&__logo {
+			margin: 0;
+		}
+	}
+
+   	// medium landscape
+	@include media('>medium', 'landscape') {
+	    display: grid;
+	    grid-auto-rows: 1fr;
+		grid-template-columns: 20% 80%;
+		grid-template-areas: "logo nav";
+	    transition: all 100ms ease-out;
+	    padding: 20px 40px;
+	    border-bottom: solid 0px $hbc-border;
+	    
+		&__logo {
+		    height: 65px;
+	        width: 80px;
+			margin: 0;
+		}
+	}
+
+	// large
+	@include media('>large') {
+	    grid-template-columns: minmax(70px, 150px) 1fr 350px;
 	    grid-template-areas: "logo meta nav";
+	    border-bottom: solid 0px $hbc-border;
+	    padding: 20px 40px;
+
+		&__logo {
+			height: 100px;
+		    width: 100px;
+		}
 
 	    &--scaled,
 	    &--shaddow {
@@ -143,124 +172,64 @@
 	        padding: 10px 40px;
 		    margin-bottom: 10px;
 		    max-height: $sticky-header-height;
-	    	
 
-			.hbc-tech-logo {
-			    height: 50px;
-			    width: 62px;
-			    margin-top: 15px;
+			.site-header__logo {
+				transition: all 200ms ease-out;
+			    height: 65px;
+		        width: 65px;
+		        margin: 0;
 			}
 	    }
 
 	    &--shaddow {
 	    	box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
 	    }
-	}
 
-   	// Tablet Potrait
-	@media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) and (orientation: portrait) {
-		grid-template-columns: 20% 80%;
-	    grid-template-areas: "logo nav";
-	    padding: 20px;
-	    margin-bottom: 0px;
-	    border-bottom: solid 1px $hbc-border;
+	    .sticky-nav-meta {
+			transition: all 200ms ease-out;
+			display: inline-block;
+		
+		    &--show {
+		    	display: inline-flex;
+		    	opacity: 1;
+			    visibility: visible;
+		    	transform: translateX(0);
+		    }
 
-	   	.sticky-nav-meta {
-    		display: none;
-    	}
+		    .meta {
+		    	&__category {
+					text-transform: uppercase;
+					color: $hbc-highlight;
+				    font-size: 15px;
 
-		&__logo {
-		    margin-top: 10px;
+					@include special-text-link();
+				}
 
-			.hbc-tech-logo {
-			    height: 50px;
-			    width: 62px;
+				&__title {
+
+					&:before {
+						display: inline-block;
+						position: relative;
+						content: "";
+						height: 20px;
+						top: 5px;
+						border-right: solid 1px $hbc-border;
+						margin-left: 10px;
+						margin-right: 17px;
+					}
+				}
 			}
 		}
 	}
 
-	// tablet landscape
-	@media screen and (min-width: $breakpoint-medium) and (orientation: landscape) {
-		grid-template-columns: 20% 80%;
-	    grid-template-areas: "logo nav";
-	    padding: 20px;
-	    margin-bottom: 0px;
-	    border-bottom: solid 1px $hbc-border;
-
-	   	.sticky-nav-meta {
-    		display: none;
-    	}
-
-    	&--scaled,
-	    &--shaddow {
-			position: relative;
-		}
+	// large
+	@include media('>xlarge') {
 
 		&__logo {
-		    margin-top: 10px;
-		    height: 70px;
-		    width: 80px;
-
-			.hbc-tech-logo {
-			    height: 70px;
-			    width: 80px;
-			}
-		}
-	}
-
-	// mobile landscape
-	@media screen and (max-height: $breakpoint-small) and (orientation: landscape) {
-		grid-template-columns: 20% 80%;
-	    grid-template-areas: "logo nav";
-	    padding: 20px;
-        max-height: 70px;
-
-		&__logo {
-		    height: 65px;
-	        width: 65px;
-
-			.hbc-tech-logo {
-			    height: 100%;
-			    width: 100%;
-			}
-		}
-
-	}
-
-	// mobile portrait
-    @media screen and (max-width: $breakpoint-medium) and (orientation: portrait) {
-	    display: block;
-	    width: 100%;
-	    padding: 20px;
-	    margin-bottom: 0px;
-	    border-bottom: solid 1px $hbc-border;
-		margin: auto;
-
-    	.sticky-nav-meta {
-    		display: none;
-    	}
-
-		&__logo {
-	    	display: block;
-		    height: 65px;
-	        width: 65px;
-		    margin: auto;
-
-			.hbc-tech-logo {
-			    height: 100%;
-			    width: 100%;
-			}
-		}
-
-	    .navigation {
-	    	display: block;
-		    width: 100%;
+			transition: all 200ms ease-out;
+			width: 120px;
 		    margin-top: 20px;
-		    text-align: center;
-
-	        &__link-item {
-	            margin: 0 20px;
-	        }
-	    }
-    }
+		    margin-bottom: -20px;
+		}
+	}
 }
