--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,8 +1,8 @@
 .site-header {
     grid-area: hd;
     display: block;
-    max-height: 200px;
-    max-width: 100vw;
+    // max-height: 200px;
+    // max-width: 100vw;
     margin-bottom: 0px;
     padding: 20px;
 	background-color: $hbc-off-white;
@@ -41,10 +41,11 @@
 	.navigation {
 	    grid-area: nav;
 	    align-self: center;
-	    display: inline-block;
-	    text-align: right;
+	    display: block;
+	    text-align: center;
 	    padding: 0;
-	    margin: 0;
+	    margin: 0 auto;
+	    margin-top: 20px;
 	    
 	    &__link-item {
 	        display: inline-block;
@@ -52,6 +53,10 @@
 	        text-align: right;
 	        height: 36px;
 	        margin: 0 0 0 40px;
+
+	        &:first-child {
+	        	margin-left: 0;
+	        }
 	    }
 
 	    &__link {
@@ -107,48 +112,52 @@
 		}
 	}
 
-	// small portrait
-    @include media('>=small', '<medium', 'portrait') {
+	// small landscape
+	@include media('>=small', 'landscape') {
+	    display: grid;
+	    grid-auto-rows: 1fr;
+		grid-template-columns: 20% 80%;
+		grid-template-areas: "logo nav";
+	    transition: all 100ms ease-out;
+	    padding: 20px;
+
+		&__logo {
+			margin: 0;
+		}
 
 	    .navigation {
-	    	display: block;
-		    margin-top: 20px;
-		    text-align: center;
-
-	        &__link-item {
-	            margin: 0 20px;
-	        }
+	    	margin: 0;
+	    	text-align: right;
 	    }
-    }
+	}
 
-   	// medium portrait
-	@include media('>=medium', 'portrait') {
+   	// medium
+	@include media('>=medium') {
 	    display: grid;
 	    grid-auto-rows: 1fr;
 		grid-template-columns: 20% 80%;
 		grid-template-areas: "logo nav";
 	    transition: all 100ms ease-out;
 	    padding: 20px 40px;
+	    border: 0;
 	    
 		&__logo {
 			margin: 0;
 		}
+
+	    .navigation {
+	    	margin: 0;
+	    	text-align: right;
+	    }
 	}
 
    	// medium landscape
-	@include media('>medium', 'landscape') {
-	    display: grid;
-	    grid-auto-rows: 1fr;
-		grid-template-columns: 20% 80%;
-		grid-template-areas: "logo nav";
-	    transition: all 100ms ease-out;
-	    padding: 20px 40px;
-	    border-bottom: solid 0px $hbc-border;
+	@include media('>=medium', 'landscape') {
 	    
 		&__logo {
-		    height: 65px;
-	        width: 80px;
-			margin: 0;
+	        height: 70px;
+		    width: 85px;
+		    margin-bottom: -20px;
 		}
 	}
 
