--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -176,8 +176,8 @@
 		}
 	}
 
-	// medium landscape
-	@include media('>medium', 'landscape') {
+	// medium
+	@include media('>medium') {
 		
 		&__color-header {
 			display: inline-flex;
@@ -187,9 +187,9 @@
 			width: 100%;
 			height: 60vw;
 			z-index: -1;
+			overflow-x: hidden;
 			clip-path: polygon(0% 4vw, 100% 0%, 100% 100%, 0% 100%);
 		    background-color: $hbc-yellow;
-			box-shadow: inset 0px -540px 20000px 40px white;
 			animation-name: reveal-feature-image, color-animation;
 			animation-duration: 0.15s, 30s;
 			animation-delay: 0.4s, 0s;
@@ -197,6 +197,15 @@
 			animation-direction: normal, normal;
 			animation-iteration-count: 1, infinite;
 		    animation-fill-mode: forwards, forwards;
+
+		    .fader {
+		    	display: flex;
+		    	box-shadow: inset 0px -540px 20000px 40px white;
+				height: 100%;
+				width: 100%;
+				transform: scaleX(1.5);
+		    }
+
 		}
 
 		&__content {
@@ -266,16 +275,9 @@
 
 		&__content {
 			grid-template-columns: 90px 90px 1fr 90px;
-		    grid-template-areas:
-		    ". meta meta ."
-		    ". title title ."
-		    ". read-time body . "
-		    ". share body . "
-		    ". . body . "
-		    ". . footer . "
-		    ;
 			margin-top: 150px;
 			opacity: 0;
+			top: 150px;
 	        animation-name: reveal-article;
 	        animation-duration: .2s;
 	        animation-delay: .5s;
@@ -288,7 +290,28 @@
 		    	font-size: 72px;
 				margin-left: -5px;
 			}
+		}
+	}
 
+	// Large Breakpoint
+	@include media('>xlarge') {
+		&__content {
+			grid-template-columns: 1fr 90px 1000px 1fr;
+			grid-template-areas:
+		    ". meta meta ."
+		    ". title title ."
+		    ". read-time body . "
+		    ". share body . "
+		    ". . body . "
+		    ". . footer . "
+		    ;
+		    clip-path: polygon(0% 0%, 100% 3vw, 100% 100%, 0% 100%);
+		    padding-top: 140px;
+
+		    &__body {
+				grid-area: body;
+				max-width: 1000px;
+			}
 		}
 	}
 }
