--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -186,6 +186,7 @@
 			left: 0;
 			width: 100%;
 			height: 60vw;
+			min-height: 800px;
 			z-index: -1;
 			overflow-x: hidden;
 			clip-path: polygon(0% 4vw, 100% 0%, 100% 100%, 0% 100%);
