--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: sub-page
 ---
 {% assign currAuthor = page.name %}
 {% assign authorPosts = site.posts | where: "author", currAuthor %}
