--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -1,25 +1,21 @@
 .article {
 
-	&__color-header {
-		display: none;
-	}
-
 	&__content {
 		display: grid;
 	    grid-auto-rows: minmax(20px, auto);
-		grid-template-columns: 0 20px 1fr 0;
+		grid-template-columns: 20px 1fr;
 	    grid-template-areas:
-		    ". meta meta ."
-		    ". title title ."
-		    ". read-time read-time read-time"
-		    ". body body . "
-		    "share share share share"
-		    "share share share share"
-		    ". footer footer . "
+		    "meta meta"
+		    "title title"
+		    "read-time read-time"
+		    "body body "
+		    "share share"
+		    "share share"
+		    "footer footer "
 		;
 		align-items: start;
 		position: relative;
-        padding: 20px 0 80px 0;
+        padding: 0 0 80px 0;
 		background-color: $hbc-white;
 
 		.article-meta {
@@ -55,7 +51,7 @@
 			grid-area: title;
 			font-size: 36px;
 		    line-height: 110%;
-		    margin: 20px 0 0 -3px;
+		    margin: 10px 0 0 -3px;
 		    pointer-events: none;
 		    font-weight: 300;
 		}
@@ -106,7 +102,6 @@
 
 		&__body {
 			grid-area: body;
-			max-width: 820px;
 			font-size: 18px;
 			color: $hbc-gray-3;
 		}
@@ -178,51 +173,11 @@
 
 	// medium
 	@include media('>medium') {
-		
-		&__color-header {
-			display: inline-flex;
-		    grid-area: article-image;
-			position: absolute;
-			left: 0;
-			width: 100%;
-			height: 60vw;
-			min-height: 800px;
-			z-index: -1;
-			overflow-x: hidden;
-			clip-path: polygon(0% 4vw, 100% 0%, 100% 100%, 0% 100%);
-		    background-color: $hbc-yellow;
-			animation-name: reveal-feature-image, color-animation;
-			animation-duration: 0.15s, 30s;
-			animation-delay: 0.4s, 0s;
-			animation-timing-function: linear, linear;
-			animation-direction: normal, normal;
-			animation-iteration-count: 1, infinite;
-		    animation-fill-mode: forwards, forwards;
-
-		    .fader {
-		    	display: flex;
-		    	box-shadow: inset 0px -540px 20000px 40px white;
-				height: 100%;
-				width: 100%;
-				transform: scaleX(1.5);
-		    }
-
-		}
 
 		&__content {
 			display: grid;
-			grid-template-columns: 40px 90px 1fr 40px;
-			grid-template-areas:
-		    ". meta meta ."
-		    ". title title ."
-		    ". read-time body . "
-		    ". share body . "
-		    ". . body . "
-		    ". . footer . "
-		    ;
-			margin-top: 80px;
-			padding: 60px 0 90px 0;
-			clip-path: polygon(0% 0%, 100% 4vw, 100% 100%, 0% 100%);
+			grid-template-columns: 90px minmax(auto, ($content-width)-90px);
+    		grid-template-areas: "meta meta" "title title" "read-time body" "share body" ". body" ". footer";
 
 		    &__title {
 				font-size: 62px;
@@ -271,30 +226,13 @@
 		}
 	}
 
+
 	// Large Breakpoint
-	@include media('>large') {
+	@include media('>=large') {
 
-		&__content {
-			grid-template-columns: 90px 90px 1fr 90px;
-			margin-top: 150px;
-			opacity: 0;
-			top: 150px;
-	        animation-name: reveal-article;
-	        animation-duration: .2s;
-	        animation-delay: .5s;
-	        animation-timing-function: cubic-bezier(0.000, 0.870, 1.000, 1.015); 
-	        animation-direction: normal;
-	        animation-iteration-count: 1;
-	        animation-fill-mode: forwards;
-
-		    &__title {
-		    	font-size: 72px;
-				margin-left: -5px;
-			}
-		}
 	}
 
-	// Large Breakpoint
+	// xLarge Breakpoint
 	@include media('>xlarge') {
 		&__content {
 			grid-template-columns: 1fr 90px 1000px 1fr;
@@ -306,9 +244,6 @@
 		    ". . body . "
 		    ". . footer . "
 		    ;
-		    clip-path: polygon(0% 0%, 100% 3vw, 100% 100%, 0% 100%);
-		    padding-top: 140px;
-
 		    &__body {
 				grid-area: body;
 				max-width: 1000px;
